CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.


Version 1.4.3
----------------------------------------------------------------------
7 March 2007
+  Removed fake French translation.

6 March 2007
+ Wrote update scripts.
+ Removed reference constructors from Module.php

5 March 2007
+ Database
  o When pulling select columns, the results were not
    stacking correctly due to variable differences. Added some checks to
    prevent it.
+ Conversion - Web page convertion adds create_user_id now.
+ Update now copies the language.php file.

1 March 2007
+ Init.php - Removed Windows versions from platform identification

28 February 2007
+ Added browser detection support under x11


Version 1.4.2
----------------------------------------------------------------------
27 February 2007
+ Fixed shortenUrl function in Text.php.


Version 1.4.1
----------------------------------------------------------------------

26 February 2007
+ Removed constructor references from Template.php
+ Added Boost warning.

23 February 2007
+ phpws_info can now list browser info.
+ Editor
  o Removed htmlarea directory
  o Added supported.php files to FCK and tinymce (simple doesn't need
    it)
  o Editor will now check the user cookie for an Editor choice. It
    defaults to the core config.php setting.
  o Set support settings for safari in tinymce

21 February 2007
+System-wide
  o Created theme_tags.txt files in all modules that use content
    variables.
  o Created docs directories in all modules.
  o Moved CHANGELOG files to new docs directories.

+ Translate
  o fixed i18n files. en_EN.php changed to en_US.php
  o Updated files: conf/i18n/en_US.php

+ Function
  o Added a parse check on a PHP 4 function name for Compat mode.

+ DB_Pager
  o Cleaned up translate functions.
  o Added alt and title parameters to sorting images for xhtml
    compliance.

+ Documentation - fixed typo in DB_Pager.txt


Version 1.4.0