@@ -2,9 +2,12 @@ CHANGELOG
 This is the change log for the phpWebSite base only. Each module has
 its own separate CHANGELOG file.
 
-
 Version 1.4.3
 ----------------------------------------------------------------------
+9 March 2007
++ Removed referenced constructors from Core.php
++ Added row_query variable to dbclass to store the row query
+
 7 March 2007
 +  Removed fake French translation.
 
